# evalMathExpression

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
examples/: bignum.rs  calc.rs  main.rs
src/: bignum.rs  calculate.rs  general.rs  lib.rs  main.rs  number.rs  parse.rs
src/general/: mathfunc.rs  terms.rs  tokens.rs
tests/: parser.rs  shunting_yard.rs
