[package]
name = "evalmath"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
criterion = "0.4.0"
criterion-macro = "0.4.0"



[[bench]]
name = "benchmark"
harness = false
